# teenygrad

./: .gitignore  ARCHITECTURE.md  README.md
.devcontainer/: devcontainer.json
book/: .gitignore  book.toml
book/src/: 1.md  2.md  3.md  SUMMARY.md  ack.md  ap.md  bib.md  dedi.md  epi.md  front.md  pref.md  pro.md  ref.md
book/src/assets/elizabot/: eliza-widget.js  qwen-widget.js
book/theme/css/: custom.css  variables.css
book/theme/js/: custom.js
examples/: 1.5-tensor.py  1.6-geometry.py  1.6-spaces.py  1.6-vspace.py  1.7-svd.py  1.8-pca.py  2.2-regression.py  abstractions.py  glm.py
rust/: Cargo.toml
rust/device_kernels/src/: lib.rs
rust/src/: gpu_host.rs  lib.rs  main.rs
teeny/: .dockerignore  .gitignore  pyproject.toml
teeny/rust/benches/: bench_cpu.rs
teeny/rust/gpu_device/src/: lib.rs
teeny/rust/src/: gpu_host.rs  lib.rs
