[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rs"
crate-type = ["cdylib", "rlib"] # creates a .so for python to import from and allows binary to link

[features]
default = []
cuda = ["dep:cust", "dep:cudarc", "dep:device_kernels", "dep:cuda_builder"]

[dependencies]
pyo3 = "0.25.0"
rayon = "1.11.0"
cust = { git = "https://github.com/rust-gpu/rust-cuda", rev = "7fa76f3d717038a92c90bf4a482b0b8dd3259344", optional = true }
device_kernels = { path = "device_kernels", optional = true }
cudarc = { version = "0.19.4", features = ["cuda-version-from-build-system"], optional = true }

[build-dependencies]
cuda_builder = { git = "https://github.com/rust-gpu/rust-cuda", rev = "7fa76f3d717038a92c90bf4a482b0b8dd3259344", features = ["rustc_codegen_nvvm"], optional = true }

[profile.bench]
opt-level = 0